--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.1.0",
     "flokit": "^1.0.0-alpha.1",
     "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.28",
     "gatsby-plugin-styled-components": "^3.1.8",
+    "gatsby-source-contentful": "^2.1.45",
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-transformer-json": "^2.2.12",
     "gatsby-transformer-sharp": "^2.2.20",
