--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "node_modules/.bin/gatsby develop",
+    "build": "node_modules/.bin/gatsby build",
+    "serve": "node_modules/.bin/gatsby serve",
+    "format": "node_modules/.bin/prettier --write \"**/*.{js,jsx,json,md}\"",
+    "migrate": "node scripts/migrate.js",
     "start": "yarn dev",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "contentful-migration": "^1.0.2",
     "dotenv": "^8.1.0",
     "flokit": "^1.0.0-alpha.1",
     "gatsby-background-image": "^0.8.15",
