Add job detail layout

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@styled-system/css": "^5.0.23",
+    "@styled-system/theme-get": "^5.1.2",
     "babel-plugin-styled-components": "^1.10.6",
     "contentful-migration": "^1.0.2",
     "dotenv": "^8.1.0",
     "flokit": "^1.0.0-alpha.1",
     "gatsby": "^2.15.28",
-    "gatsby-background-image": "^0.8.15",
+    "gatsby-background-image": "^0.8.18",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.28",
