--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -21,7 +21,7 @@
     "contentful-migration": "^1.0.2",
     "dotenv": "^8.1.0",
     "flokit": "^1.0.0-alpha.1",
-    "gatsby": "^2.15.28",
+    "gatsby": "^2.18.4",
     "gatsby-background-image": "^0.8.18",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-react-helmet": "^3.1.10",
@@ -29,11 +29,12 @@
     "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-source-contentful": "^2.1.45",
     "gatsby-source-filesystem": "^2.1.29",
+    "gatsby-theme-careers": "*",
     "gatsby-transformer-json": "^2.2.12",
     "gatsby-transformer-sharp": "^2.2.20",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.4.0"
   }
