--- a/packages/gatsby-theme-careers/package.json
+++ b/packages/gatsby-theme-careers/package.json
@@ -11,5 +11,15 @@
     "build": "gatsby build",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+  },
+  "peerDependencies": {
+    "gatsby": "^2.18.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "gatsby": "^2.18.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
