Add package.json description

--- a/packages/gatsby-theme-careers/package.json
+++ b/packages/gatsby-theme-careers/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gatsby-theme-careers",
+  "description": "A Gatsby theme that generates a simple job listing site using Contentful as data source.",
   "version": "0.0.0",
   "main": "index.js",
   "repository": "https://github.com/iagodahlem/gatsby-theme-careers",
