--- a/packages/gatsby-theme-careers/package.json
+++ b/packages/gatsby-theme-careers/package.json
@@ -16,8 +16,10 @@
     "babel-plugin-styled-components": "^1.10.6",
     "contentful-migration": "^1.0.6",
     "flokit": "^1.0.0-alpha.1",
+    "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-styled-components": "^3.1.14",
     "gatsby-source-contentful": "^2.1.64",
+    "react-helmet": "^5.2.1",
     "styled-components": "^4.4.1"
   },
   "peerDependencies": {
